# qdrant-search-tester

./: .env.example  .gitignore  BGM_M3_MIGRATION.md  CLOUD_SETUP.md  Dockerfile  LICENSE  NGINX_SETUP.md  TESTING_GUIDE.md  create_structure.ps1  dashboard.dockerfile  docker-compose.yaml  dockerfile.dockerfile  ecosystem.config.cjs  embedding_client.py  package.json  pyproject.toml  readme.md  requirements.txt  streamlit_config.toml.example  test_dashboard.py  test_manager.py  tests.json
data/: bufet-roots-text.json  recipes_full_text.json  recipes_structured.json
nginx/: qtester.conf
qdrant_test_scripts/: __init__.py  setup-qdrant.py  test-runner-v2.py  test-runner.py
streamlit_dashboard/: test-dashboard.py  test_dashboard.py  test_simple.py
